Add initial nav elements

--- a/index.html
+++ b/index.html
@@ -23,7 +23,21 @@
     <link rel="stylesheet" href="./styles.css" />
   </head>
   <body>
-    <header></header>
+    <header id="intro">
+      <nav>
+        <div>
+          <img src="./EMS.svg" alt="Logo" />
+        </div>
+        <div>
+          <a href="#Intro">Intro</a>
+          <a href="#about">About</a>
+          <a href="#shop">Shop</a>
+        </div>
+        <div>
+          <img src="./cart.svg" alt="Cart Button" />
+        </div>
+      </nav>
+    </header>
     <main></main>
     <footer></footer>
   </body>
