Add about section info

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <link rel="stylesheet" href="./styles.css" />
   </head>
   <body>
+    <!-- Intro Section -->
     <header id="intro">
       <nav>
         <div>
@@ -37,8 +38,21 @@
           <img src="./cart.svg" alt="Cart Button" />
         </div>
       </nav>
+      <div>
+        <h1>The E-Millenial Store</h1>
+        <img src="./heroImage.png" alt="Hero Image">
+        <button>Shop Now</button>
     </header>
-    <main></main>
+    <main>
+      <!-- About Section -->
+      <section id="about">
+        <p>E-Millenial store is a hypothetical online store for gadgets we
+          believe every 'Millenial' or 'Gen Z' should have today. We sell
+          smartphones, laptops, tablets, and other gadgets. Explore our store
+          and find the perfect gadget for you.
+        </p>
+      </section>
+    </main>
     <footer></footer>
   </body>
 </html>
