--- a/index.html
+++ b/index.html
@@ -25,19 +25,23 @@
   <body>
     <!-- Intro Section -->
     <header id="intro">
-      <nav>
+      <div>
         <div>
           <img src="./EMS.svg" alt="Logo" />
         </div>
+        <nav>
+          <ul>
+            <li><a href="#Intro">Intro</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#shop">Shop</a></li>
+          </ul>
+        </nav>
         <div>
           <a href="#Intro">Intro</a>
           <a href="#about">About</a>
           <a href="#shop">Shop</a>
         </div>
-        <div>
-          <img src="./cart.svg" alt="Cart Button" />
-        </div>
-      </nav>
+      </div>
       <div>
         <h1>The E-Millenial Store</h1>
         <img src="./heroImage.png" alt="Hero Image">
