--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <header id="intro">
       <div>
         <div>
-          <img src="./EMS.svg" alt="Logo" />
+          <img src="./images/EMS.svg" alt="Logo" />
         </div>
         <nav>
           <ul>
@@ -37,14 +37,12 @@
           </ul>
         </nav>
         <div>
-          <a href="#Intro">Intro</a>
-          <a href="#about">About</a>
-          <a href="#shop">Shop</a>
+          <img src="./images/cart.svg" alt="Cart Button" />
         </div>
       </div>
       <div>
         <h1>The E-Millenial Store</h1>
-        <img src="./heroImage.png" alt="Hero Image">
+        <img src="./images/heroImage.png" alt="Hero Image">
         <button>Shop Now</button>
     </header>
     <main>
