feat: Add section for displaying gadgets and their details

--- a/index.html
+++ b/index.html
@@ -54,6 +54,41 @@
           and find the perfect gadget for you.
         </p>
       </section>
+      <section id="shop">
+        <h2>OUR GADGETS</h2>
+        <div class="gadgets">
+          <div>
+            <img src="./images/product1.png" alt="product1">
+            <h3>SAMSUNG TV</h3>
+            <button>ADD TO CART</button>
+          </div>
+          <div>
+            <img src="./images/product2.png" alt="product2">
+            <h3>PIXEL 4a</h3>
+            <button>ADD TO CART</button>
+          </div>
+          <div>
+            <img src="./images/product3.png" alt="product3">
+            <h3>PS 5</h3>
+            <button>ADD TO CART</button>
+          </div>
+          <div>
+            <img src="./images/product4.png" alt="product4">
+            <h3>MACBOOK AIR</h3>
+            <button>ADD TO CART</button>
+          </div>
+          <div>
+            <img src="./images/product5.png" alt="product5">
+            <h3>APPLE WATCH</h3>
+            <button>ADD TO CART</button>
+          </div>
+          <div>
+            <img src="./images/product6.png" alt="product6">
+            <h3>AIR PODS</h3>
+            <button>ADD TO CART</button>
+          </div>
+        </div>
+      </section>
     </main>
     <footer></footer>
   </body>
