chore: Add footer with logo and attribution

--- a/index.html
+++ b/index.html
@@ -90,6 +90,11 @@
         </div>
       </section>
     </main>
-    <footer></footer>
+    <footer>
+      <div>
+        <img src="./images/EMS.svg" alt="Logo" />
+      </div>
+      <p>Designed and crafted by a frontend ninja</p>
+    </footer>
   </body>
 </html>
