Apply minor format changes

--- a/index.html
+++ b/index.html
@@ -42,13 +42,14 @@
       </div>
       <div>
         <h1>The E-Millenial Store</h1>
-        <img src="./images/heroImage.png" alt="Hero Image">
+        <img src="./images/heroImage.png" alt="Hero Image" />
         <button>Shop Now</button>
     </header>
     <main>
       <!-- About Section -->
       <section id="about">
-        <p>E-Millenial store is a hypothetical online store for gadgets we
+        <p>
+          E-Millenial store is a hypothetical online store for gadgets we
           believe every 'Millenial' or 'Gen Z' should have today. We sell
           smartphones, laptops, tablets, and other gadgets. Explore our store
           and find the perfect gadget for you.
@@ -58,32 +59,32 @@
         <h2>OUR GADGETS</h2>
         <div class="gadgets">
           <div>
-            <img src="./images/product1.png" alt="product1">
+            <img src="./images/product1.png" alt="product1" />
             <h3>SAMSUNG TV</h3>
             <button>ADD TO CART</button>
           </div>
           <div>
-            <img src="./images/product2.png" alt="product2">
+            <img src="./images/product2.png" alt="product2" />
             <h3>PIXEL 4a</h3>
             <button>ADD TO CART</button>
           </div>
           <div>
-            <img src="./images/product3.png" alt="product3">
+            <img src="./images/product3.png" alt="product3" />
             <h3>PS 5</h3>
             <button>ADD TO CART</button>
           </div>
           <div>
-            <img src="./images/product4.png" alt="product4">
+            <img src="./images/product4.png" alt="product4" />
             <h3>MACBOOK AIR</h3>
             <button>ADD TO CART</button>
           </div>
           <div>
-            <img src="./images/product5.png" alt="product5">
+            <img src="./images/product5.png" alt="product5" />
             <h3>APPLE WATCH</h3>
             <button>ADD TO CART</button>
           </div>
           <div>
-            <img src="./images/product6.png" alt="product6">
+            <img src="./images/product6.png" alt="product6" />
             <h3>AIR PODS</h3>
             <button>ADD TO CART</button>
           </div>
