Add styles for the top bar

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <body>
     <!-- Intro Section -->
     <header id="intro">
-      <div>
+      <div class="top-bar">
         <div>
           <img src="./images/EMS.svg" alt="Logo" />
         </div>
@@ -36,14 +36,16 @@
             <li><a href="#shop">Shop</a></li>
           </ul>
         </nav>
-        <div>
+        <div class="cart-logo">
           <img src="./images/cart.svg" alt="Cart Button" />
+          <span>0</span>
         </div>
       </div>
       <div>
         <h1>The E-Millenial Store</h1>
         <img src="./images/heroImage.png" alt="Hero Image" />
         <button>Shop Now</button>
+      </div>
     </header>
     <main>
       <!-- About Section -->
