--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
       href="./favicon-16x16.png"
     />
     <link rel="stylesheet" href="./styles.css" />
+    <script defer src="./app.js"></script>
   </head>
   <body>
     <!-- Intro Section -->
