--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@
           <span>0</span>
         </div>
       </div>
-      <div>
+      <div class="hero">
         <h1>The E-Millenial Store</h1>
         <img src="./images/heroImage.png" alt="Hero Image" />
-        <button>Shop Now</button>
       </div>
+      <button>Shop Now</button>
     </header>
     <main>
       <!-- About Section -->
