Add a non-breaking hyphen

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         </div>
       </div>
       <div class="hero">
-        <h1>The E-Millenial Store</h1>
+        <h1>The E&#8209;Millenial Store</h1>
         <img src="./images/heroImage.png" alt="Hero Image" />
       </div>
       <button>Shop Now</button>
